Validierung des Eintragens des Urlaubs Fall 2 implementiert und getestet